--- a/src/content/blog/开源作品：电子八卦罗盘小程序.md
+++ b/src/content/blog/开源作品：电子八卦罗盘小程序.md
@@ -3,7 +3,7 @@ author: xxxu
 pubDatetime: 2024-12-22T10:20:35Z
 modDatetime: 2024-12-22T10:20:35Z
 title: 开源作品：电子八卦罗盘小程序
-slug:  开源作品：电子八卦罗盘小程序-blog
+slug: 电子八卦罗盘小程序-blog
 featured: true
 draft: false
 tags:
