--- a/src/content/blog/开源作品：电子八卦罗盘小程序.md
+++ b/src/content/blog/开源作品：电子八卦罗盘小程序.md
@@ -4,7 +4,7 @@ pubDatetime: 2024-12-22T10:20:35Z
 modDatetime: 2024-12-22T10:20:35Z
 title: 开源作品：电子八卦罗盘小程序
 slug: 电子八卦罗盘小程序-blog
-featured: true
+featured: false
 draft: false
 tags:
   - 软件
