Update and rename 开源作品：电子八卦罗盘小程序.md to 开源作品-电子八卦罗盘小程序.md

--- a/src/content/blog/开源作品-电子八卦罗盘小程序.md
+++ b/src/content/blog/开源作品-电子八卦罗盘小程序.md
@@ -2,7 +2,7 @@
 author: xxxu
 pubDatetime: 2024-12-22T10:20:35Z
 modDatetime: 2024-12-22T10:20:35Z
-title: 开源作品：电子八卦罗盘小程序
+title: 开源作品-电子八卦罗盘小程序
 slug: 电子八卦罗盘小程序-blog
 featured: false
 draft: false
@@ -12,7 +12,7 @@ tags:
 description:
   开源作品：电子八卦罗盘小程序
 ---
-# 开源作品：电子八卦罗盘小程序
+# 开源作品-电子八卦罗盘小程序
 
 ## 缘起
 
