Update and rename 开源作品：电子八卦罗盘小程序.md to 电子八卦罗盘小程序.md

--- a/src/content/blog/电子八卦罗盘小程序.md
+++ b/src/content/blog/电子八卦罗盘小程序.md
@@ -2,15 +2,15 @@
 author: xxxu
 pubDatetime: 2024-12-22T15:22:00Z
 modDatetime: 2024-12-22T09:12:47.400Z
-title: 开源作品：电子八卦罗盘小程序
-slug: 开源作品-电子八卦罗盘小程序-blog
+title: 电子八卦罗盘小程序
+slug: 电子八卦罗盘小程序-blog
 featured: true
 draft: false
 tags:
   - 软件
   - 开源
 description:
-  开源作品：电子八卦罗盘小程序
+  开源作品：电子八卦罗盘小程序，遇事不决，可问罗盘。
 ---
 # 开源作品：电子八卦罗盘小程序
 
