--- a/src/content/blog/电子八卦罗盘小程序.md
+++ b/src/content/blog/电子八卦罗盘小程序.md
@@ -24,11 +24,8 @@ description:
 这是一款基于微信小程序开发的电子八卦罗盘，将传统易经文化与现代技术相结合。当你遇到难以抉择的事情时，可以通过问卜八卦来获得一些启发和思考的方向。
 
 ### 核心功能
-
-<div align="center">
-  <img src="https://image.xxxu.me/rest/A9ZpslK.png" alt="罗盘界面" width="300">
-  <img src="https://image.xxxu.me/rest/egcQslK.png" alt="解读结果" width="300">
-</div>
+![罗盘界面](https://image.xxxu.me/rest/A9ZpslK.png)
+![解读结果](https://image.xxxu.me/rest/egcQslK.png)
 
 1. **电子罗盘**
    
@@ -253,3 +250,4 @@ const guaData = [{
 
 - GitHub: [xxxume](https://github.com/xxxume)
 - Email: [xxxu@xxxu.me]
+
