--- a/src/content/blog/电子八卦罗盘小程序.md
+++ b/src/content/blog/电子八卦罗盘小程序.md
@@ -24,8 +24,11 @@ description:
 这是一款基于微信小程序开发的电子八卦罗盘，将传统易经文化与现代技术相结合。当你遇到难以抉择的事情时，可以通过问卜八卦来获得一些启发和思考的方向。
 
 ### 核心功能
-![罗盘界面](https://image.xxxu.me/rest/A9ZpslK.png)
-![解读结果](https://image.xxxu.me/rest/egcQslK.png)
+
+<div align="center">
+  <img src="https://image.xxxu.me/rest/A9ZpslK.png" alt="罗盘界面" width="300">
+  <img src="https://image.xxxu.me/rest/egcQslK.png" alt="解读结果" width="300">
+</div>
 
 1. **电子罗盘**
    
@@ -246,8 +249,12 @@ const guaData = [{
 ## 免责声明
 
 需要特别说明的是，本小程序提供的占卜结果仅供娱乐和参考，不应作为人生重大决策的唯一依据。请保持独立思考，理性对待每一个选择。
+
+---
+
 欢迎关注我的其他开源项目，也欢迎通过以下方式与我交流：
 
 - GitHub: [xxxume](https://github.com/xxxume)
 - Email: [xxxu@xxxu.me]
+
 
